feat: addPlayers method added to TeamApi
